made autocomplete off at index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="card-body ">
             <h3 class="card-title mb-4">Task List</h3>
                 <div class="mb-3 task-div">
-                    <input type="text" class="form-control border-top-0 border-start-0 border-end-0 rounded-0 outline-0 shadow-none" id="newTask" placeholder="New Tasks">
+                    <input type="text" class="form-control border-top-0 border-start-0 border-end-0 rounded-0 outline-0 shadow-none" id="newTask" placeholder="New Tasks" autocomplete="off">
                   </div>
                 <div class="add-task-btn">
                     <button type="button" class="btn btn-primary mb-4 shadow-none">ADD TASK <span><i class="fas fa-plus"></i></span></button>
