--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <div class="card container">
+    <div class="card container bg-light">
         <div class="card-body ">
             <h3 class="card-title mb-4">Task List</h3>
                 <div class="mb-3 task-div">
@@ -66,6 +66,9 @@
 
 
         </div>
+
+          <small class="text-center mt-5 mb-2 dates">Powered By clevernat &copy; <span class="insert-date">January 2021</span></small>
+     
     </div>
 
 
