delete powered by @index.html file and add functionality to it @app.js file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <div class="card container bg-light">
+    <div class="card containe">
         <div class="card-body ">
             <h3 class="card-title mb-4">Task List</h3>
                 <div class="mb-3 task-div">
@@ -67,7 +67,7 @@
 
         </div>
 
-          <small class="text-center mt-5 mb-2 dates">Powered By clevernat &copy; <span class="insert-date">January 2021</span></small>
+          <small class="text-center mt-5 mb-2 dates">clevernat &copy; <span class="insert-date">January 2021</span></small>
      
     </div>
 
