deleted statically date from index.html file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         </div>
 
-          <small class="text-center mt-5 mb-2 dates">clevernat &copy; <span class="insert-date">January 2021</span></small>
+          <small class="text-center mt-5 mb-2 dates">clevernat &copy; <span class="insert-date"></span></small>
      
     </div>
 
